syntax = "proto3";

service Organism {
	rpc createCell(CellInfo) returns (ActionResult){}
	rpc killCell(UUID) returns (ActionResult){}
	rpc findCellsNearby(LocationRequest) returns (LocationResponse){}
}

message UUID {
	bytes value = 1;
}

message LocationRequest {
	float x = 1;
	float y = 2;
	float distance = 3;
}



message CellInfo {
	UUID id = 1;
	int32 type = 2;
	int32 size = 3;
	float speed = 4;
	float divideRate = 5;
	float x = 6;
	float y = 7;
	float divisionCounter = 8;
	float angle = 9;
}

message LocationResponse {
	repeated CellInfo cells = 1;
}


message ActionResult {
	int32 result = 1;
}



